fix: id:53325 Textarea content overlap with its label text

--- a/src/components/TextField/TextField.scss
+++ b/src/components/TextField/TextField.scss
@@ -36,6 +36,12 @@ $spinner-size: rem(20px);
   .input {
     color: color(ink);
   }
+  &.multiline {
+    .input {
+      margin-top:(control-vertical-padding() * 2) - 0.3rem;;
+      padding-top:0px;
+    }
+  }
 }
 
 .focused {
